	Small crossover type parameter bug fixed, and printout error in
		FloatVectorSpecies fixed.  Thanks to Elena Popovici
		<epopovici@gmu.edu>
	tutorial2 and tutorial3 missing fitness parameter declarations.
		Thanks to Rick van Krevelen <krevelen@cs.vu.nl>
	documentation fix (a </ul>) to Prototype which should keep the
		class documentation of all prototypes from getting incorrectly
		indented.
	Added Elena Popovici to the author's list
	Tweaked the post-tutorial discussion
	Updated Mersenne Twister to include SerialVersionUIDs to quiet
		compiler warnings in JDK 1.6
	Minor documentation bug fix.  Thanks to Ian Lindsay
		<iml04@hampshire.edu>	
	As long promised EvolutionState.statics is gone.
	Added a break in the main loop of MutateSwapPipeline,
		MutatePromotePipeline, and MutateDemotePipeline  -- thanks to
		Andrea Arcuri <A.arcuri@cs.bham.ac.uk>
	Removed default tournament selections from ec/gp/breed/breed.params;
		they'd cause confusion.
	Added GPIndividual.parseGenotype() (to be a bit more consistent),
		eliminating GPIndividual.readIndividual(DataInput...), and
		relying on the superclass method instead.
	Modified the GPIndividual reader/writer documentation, which was 
		incorrect.
	Documentation fix to BreedingSource
	Significant modifications to ESSelection operator.  Previously it had
		a major constraint: it had to be called exactly once in a
		given pipeline production of a child.  Now you can have many
		ESSelection operators in a pipeline, and call any of them
		multiple times, in order to produce a single child.  They will
		all return the same parent, and only increment to the next
		parent when the child has been created and a new child is being
		generated.  WARNING: untested, may have introduced bugs.
	Significant modifications to various VectorSpecies and VectorIndividual
		subclasses: previously internally we had both a minGene
		and a minGenes[] variable.  If a flag was set, minGene was
		used to return the min gene value for all genes; else