@@ -326,6 +326,7 @@ public class KozaStatistics extends Statistics implements SteadyStateStatisticsF
             // print the best-of-generation individual
             state.output.println("\nBest Individual of Generation:",Output.V_NO_GENERAL,statisticslog);
             best_i[x].printIndividualForHumans(state,statisticslog,Output.V_NO_GENERAL);
+            state.output.message("Subpop " + x + " best fitness of generation: " + best_i[x].fitness.fitnessToStringForHumans());
             }
         }
 
@@ -359,8 +360,10 @@ public class KozaStatistics extends Statistics implements SteadyStateStatisticsF
         
         state.output.println("\nBest Individual of Run:",Output.V_NO_GENERAL,statisticslog);
         for(int x=0;x<state.population.subpops.length;x++)
-            best_of_run[x].printIndividualForHumans(state,statisticslog,Output.V_NO_GENERAL);
-
+            {
+	    best_of_run[x].printIndividualForHumans(state,statisticslog,Output.V_NO_GENERAL);
+            state.output.message("Subpop " + x + " best fitness of run: " + best_of_run[x].fitness.fitnessToStringForHumans());
+	    }
 
         // Output timings
         if (doFull)
